[package]
name = "tcp-h264-reverse-proxy"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tcp-h264-reverse-proxy"
path = "src/main.rs"

[dependencies]
log = "^0.4.14"
env_logger = "^0.9.0"
h264_nal_paging = "^0.1.11"
ipnet = "^2.4"

[dependencies.hyper]
version = "^0.14.16"
features = ["server", "tcp", "http1"]

[dependencies.tokio]
version = "^1.17.0"
features = ["full"]

[profile.release]
lto = "thin"
